// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CartItemBlock should create CartItemBlock 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="line"
      />
      <div
        class="root"
      >
        <img
          alt=""
          class="root__imgmain"
          src="link"
        />
        <div
          class="root__text"
        >
          <div
            class="root__text__v"
          >
            <img
              alt=""
              src="./images/littlebootle.svg"
            />
            <p>
              45
               мл
            </p>
          </div>
          <p
            class="root__text__name"
          >
            Мыло
          </p>
          <p
            class="root__text__desciption"
          >
            description
          </p>
        </div>
        <span
          class="root__vertline"
        />
        <div
          class="root__block"
        >
          <div
            class="root__buttons"
          >
            <button>
              -
            </button>
            <p>
              2
            </p>
            <button>
              +
            </button>
          </div>
          <span
            class="root__vertline"
          />
          <p
            class="root__price"
          >
            1100
             ₸
          </p>
          <span
            class="root__vertline"
          />
          <button
            class="root__del"
          >
            <img
              alt=""
              src="/images/trash.svg"
            />
          </button>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="line"
    />
    <div
      class="root"
    >
      <img
        alt=""
        class="root__imgmain"
        src="link"
      />
      <div
        class="root__text"
      >
        <div
          class="root__text__v"
        >
          <img
            alt=""
            src="./images/littlebootle.svg"
          />
          <p>
            45
             мл
          </p>
        </div>
        <p
          class="root__text__name"
        >
          Мыло
        </p>
        <p
          class="root__text__desciption"
        >
          description
        </p>
      </div>
      <span
        class="root__vertline"
      />
      <div
        class="root__block"
      >
        <div
          class="root__buttons"
        >
          <button>
            -
          </button>
          <p>
            2
          </p>
          <button>
            +
          </button>
        </div>
        <span
          class="root__vertline"
        />
        <p
          class="root__price"
        >
          1100
           ₸
        </p>
        <span
          class="root__vertline"
        />
        <button
          class="root__del"
        >
          <img
            alt=""
            src="/images/trash.svg"
          />
        </button>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SortBlock should open popup 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <section
        class="nameandsort"
      >
        <div
          class="sort"
          data-testid="toggle-elem"
        >
          <div
            class="sort-label"
          >
            <p>
              Сортировка:
            </p>
            <span
              data-testid="toggle-btn"
            />
          </div>
        </div>
      </section>
    </div>
  </body>,
  "container": <div>
    <section
      class="nameandsort"
    >
      <div
        class="sort"
        data-testid="toggle-elem"
      >
        <div
          class="sort-label"
        >
          <p>
            Сортировка:
          </p>
          <span
            data-testid="toggle-btn"
          />
        </div>
      </div>
    </section>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
